--- a/supplementary/S4_tsne.html
+++ b/supplementary/S4_tsne.html
@@ -3,14 +3,14 @@
 <head>
 <meta charset="utf-8"/>
 <style>body{background-color:white;}</style>
-<script src="4_tsne/htmlwidgets-1.5.3/htmlwidgets.js"></script>
-<script src="4_tsne/plotly-binding-4.9.4.1/plotly.js"></script>
-<script src="4_tsne/typedarray-0.1/typedarray.min.js"></script>
-<script src="4_tsne/jquery-3.5.1/jquery.min.js"></script>
-<link href="4_tsne/crosstalk-1.1.1/css/crosstalk.css" rel="stylesheet" />
-<script src="4_tsne/crosstalk-1.1.1/js/crosstalk.min.js"></script>
-<link href="4_tsne/plotly-htmlwidgets-css-1.57.1/plotly-htmlwidgets.css" rel="stylesheet" />
-<script src="4_tsne/plotly-main-1.57.1/plotly-latest.min.js"></script>
+<script src="S4_tsne/htmlwidgets-1.5.3/htmlwidgets.js"></script>
+<script src="S4_tsne/plotly-binding-4.9.4.1/plotly.js"></script>
+<script src="S4_tsne/typedarray-0.1/typedarray.min.js"></script>
+<script src="S4_tsne/jquery-3.5.1/jquery.min.js"></script>
+<link href="S4_tsne/crosstalk-1.1.1/css/crosstalk.css" rel="stylesheet" />
+<script src="S4_tsne/crosstalk-1.1.1/js/crosstalk.min.js"></script>
+<link href="S4_tsne/plotly-htmlwidgets-css-1.57.1/plotly-htmlwidgets.css" rel="stylesheet" />
+<script src="S4_tsne/plotly-main-1.57.1/plotly-latest.min.js"></script>
 <style>
     html, body {
         height: 100%;
